<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:padding="24dp">

    <LinearLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="118dp">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/PICK_IMAGE"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonGallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/OPEN_GALLERY"
                android:padding="16dp"
                android:src="@drawable/baseline_folder_24"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/buttonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/TAKE_PICTURE"
                android:padding="16dp"
                android:src="@drawable/baseline_camera_alt_24"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/buttonCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/DOWNLOAD"
                android:padding="16dp"
                android:src="@drawable/baseline_cloud_24"
                app:tint="@color/black" />
        </LinearLayout>

        <com.example.projetharmonisation.view.RatioImageView
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ACCEPT"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:src="@drawable/baseline_check_24"
            android:enabled="false"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/buttonGalleryInternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/GALLERY"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:src="@drawable/baseline_grid_on_24"
            android:enabled="false"
            app:tint="@color/black" />

        <!--Button
            android:id="@+id/buttonClearGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CLEAR_GALLERY"
            android:layout_marginTop="8dp" /-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>