<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:text="@string/EDIT_TITLE"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.example.projetharmonisation.view.BeforeAfterView
        android:id="@+id/beforeAfterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seekBarSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50"
        android:max="100" />

    <TextView
        android:text="@string/SATURATION"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/seekBarAdjustment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50" />

    <com.example.projetharmonisation.view.ColorWheelPickerView
        android:id="@+id/rotationPicker"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonApplyClassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/REAPPLY"
            android:padding="16dp"
            android:src="@drawable/baseline_loop_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ACCEPT"
            android:padding="16dp"
            android:src="@drawable/baseline_check_24"
            app:tint="@color/white" />

    </LinearLayout>

</LinearLayout>
